--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -1036,6 +1036,18 @@ moment strength ratio:</string>
                      <item row="2" column="1">
                       <widget class="QWidget" name="wgt_design_wall_seismic_detailing" native="true">
                        <layout class="QGridLayout" name="gridLayout_29">
+                        <property name="leftMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="topMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="rightMargin">
+                         <number>0</number>
+                        </property>
+                        <property name="bottomMargin">
+                         <number>0</number>
+                        </property>
                         <item row="0" column="0">
                          <layout class="QHBoxLayout" name="lay_design_wall_seismic_detailing">
                           <item>
@@ -1111,7 +1123,16 @@ moment strength ratio:</string>
     </property>
     <addaction name="mni_acerca_de"/>
    </widget>
+   <widget class="QMenu" name="mnu_design_results">
+    <property name="title">
+     <string>Design Results</string>
+    </property>
+    <addaction name="mni_load_beam_data"/>
+    <addaction name="mni_load_column_data"/>
+    <addaction name="mni_load_row_data"/>
+   </widget>
    <addaction name="mnu_file"/>
+   <addaction name="mnu_design_results"/>
    <addaction name="mnu_ayuda"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -1128,6 +1149,21 @@ moment strength ratio:</string>
   <action name="mni_acerca_de">
    <property name="text">
     <string>Acerca de...</string>
+   </property>
+  </action>
+  <action name="mni_load_beam_data">
+   <property name="text">
+    <string>Load beam data from Excel...</string>
+   </property>
+  </action>
+  <action name="mni_load_column_data">
+   <property name="text">
+    <string>Load column data from Excel...</string>
+   </property>
+  </action>
+  <action name="mni_load_row_data">
+   <property name="text">
+    <string>Load wall data from Excel...</string>
    </property>
   </action>
  </widget>
